<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<license>BSD-3-Clause</license>
<exec_depend>rclpy</exec_depend>            
<exec_depend>std_msgs</exec_depend>

<package format="3">
  <name>mypkg</name>
  <version>0.0.0</version>
  <description>TODO:ロボットシステム学</description>
  <maintainer email="s24C1087re@s.chibakoudai.jp">abcd0315</maintainer>
  <license>TODO:BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  </package>
